Changed gtk-3.20 scrollbar slider style class to match BlackMATE; should fix incomplete display of scrollbar in mate-terminal for gtk-3.22

--- a/UbuntuStudio_Legacy/gtk-3.20/gtk-widgets.css
+++ b/UbuntuStudio_Legacy/gtk-3.20/gtk-widgets.css
@@ -1126,23 +1126,23 @@ scrollbar.vertical .slider {
 
 
 
-scrollbar:hover slider,
-scrollbar:hover .slider{
+scrollbar slider:hover,
+scrollbar .slider:hover {
 	background-image: url("assets/holes_tiny_glow_horiz.svg"),
 	                  linear-gradient(to right,
 	                                  @slider_gradient_color_a,
 	                                  @slider_gradient_color_b);
 }
 
-scrollbar.vertical:hover slider,
-scrollbar.vertical:hover .slider{
+scrollbar.vertical slider:hover,
+scrollbar.vertical .slider:hover {
 	background-image: url("assets/holes_tiny_glow_vert.svg"),
 	                   linear-gradient(to right,
 	                                  @slider_gradient_color_a,
 	                                  @slider_gradient_color_b);
 }
-scrollbar:hover:active slider,
-scrollbar:hover:active .slider{
+scrollbar slider:hover:active,
+scrollbar .slider:hover:active {
 	color: @theme_fg_color;
 	border-style: solid;
 	background-image: url("assets/holes_tiny_glow_horiz.svg"),
@@ -1151,8 +1151,8 @@ scrollbar:hover:active .slider{
 	                                  @slider_gradient_color_b);
 }
 
-scrollbar.vertical:hover:active slider,
-scrollbar.vertical:hover:active .slider{
+scrollbar.vertical slider:hover:active,
+scrollbar.vertical .slider:hover:active {
 	background-image: url("assets/holes_tiny_glow_vert.svg"),
 	                  linear-gradient(to bottom,
 	                                  @slider_gradient_color_a,
@@ -1160,7 +1160,8 @@ scrollbar.vertical:hover:active .slider{
 }
 
 scrollbar button,
-scrollbar .button{
+scrollbar button:disabled, /* I don't know if this intended, if so, ignore */
+scrollbar .button {
 	background-image: none;
 	background-color:@theme_bg_color;
 	color: @theme_fg_color;
